--- a/assets/templates/help_dialog_collapsed.html
+++ b/assets/templates/help_dialog_collapsed.html
@@ -127,149 +127,7 @@
 </script>
 
 <div class="sidebar branding-below">
-<h1 id="aws-pricing-add-on">AWS Pricing add-on</h1>
-<p>The AWS Pricing Google Sheets add-on allows you to incorporate the latest AWS pricing data in your Google Sheets spreadsheets. This makes it easy to perform cloud cost analysis directly in Sheets without error-prone copy-and-paste from pricing websites. Pricing data tracks the latest discounts from AWS.</p>
-<button type="button" class="collapsible">Supported services</button>
-<div class="content">
-<p>The following services are currently supported with more to come:</p>
-<ul>
-<li>EC2 instances (Linux, RHEL, SUSE and Windows)</li>
-<li>EBS storage, Provisioned IOPS and snapshots</li>
-<li>RDS DB instances</li>
-<li>RDS Storage</li>
-</ul>
-<p>Pricing options support on-demand and reserved purchasing.</p>
-</div><button type="button" class="collapsible">Call syntax</button>
-<div class="content">
-<p>This addon supplies multiple custom functions that you can invoke from a Google Sheets cell. To invoke a custom function (or any function), start by typing a &quot;<code>=AWS</code>&quot;. The sheets editor will popup a command completion dialog that searches as you type. All the functions here include parameter documentation that will appear when you&#39;ve selected a particular function and help describe the order of parameters.</p>
-<p>Functions are documented here without the required leading &quot;<code>=</code>&quot; for ease of reading.</p>
-</div><button type="button" class="collapsible">EC2 Instances</button>
-<div class="content">
-</div><button type="button" class="collapsible">Parameters</button>
-<div class="content">
-<p>These define the parameters used in the following functions and instance settings.</p>
-<ul>
-<li><code>instanceType</code>: name of instance represented as <code>&lt;class&gt;.&lt;size&gt;</code>, eg <code>m5.xlarge</code></li>
-<li><code>region</code>: name of AWS region, eg <code>us-east-1</code> and <code>eu-west-1</code></li>
-<li><code>purchaseType</code>: name of the purchasing type, either <code>ondemand</code> or <code>reserved</code></li>
-<li><code>platform</code>: name of OS platform, currently supports: <code>linux</code>, <code>windows</code>, <code>rhel</code>, <code>suse</code>, <code>linux_std</code> (Linux SQL Standard), <code>linux_web</code> (Linux SQL Web), <code>linux_enterprise</code> (Linux SQL Enterprise), <code>windows_std</code> (Windows SQL Std), <code>windows_web</code> (Windows SQL Web), <code>windows_enterprise</code> (Windows SQL Enterprise)</li>
-<li><code>sqlLicense</code>: name of MSSQL license, either: <code>std</code>, <code>web</code>, or <code>enterprise</code></li>
-<li><code>offeringClass</code>: type of reserved instance, either <code>standard</code> or <code>convertible</code></li>
-<li><code>purchaseTerm</code>: duration of reserved instance purchase in years, either <code>&quot;1yr&quot;</code> or <code>&quot;3yr&quot;</code></li>
-<li><code>paymentOption</code>: payment option of reserved instance, either <code>no_upfront</code>, <code>partial_upfront</code>, or <code>all_upfront</code></li>
-</ul>
-</div><button type="button" class="collapsible">EC2 On-demand Functions</button>
-<div class="content">
-<p>To explicitly grab on-demand pricing use this function:</p>
-<ul>
-<li><code>AWS_EC2(&quot;ondemand&quot;, instanceType, region, platform)</code></li>
-</ul>
-</div><button type="button" class="collapsible">EC2 RI Functions</button>
-<div class="content">
-<p>The simplest EC2 RI function requires multiple parameters to specify all the RI pricing details:</p>
-<ul>
-<li><code>AWS_EC2(&quot;reserved&quot;, instanceType, region, platform, offeringClass, purchaseTerm, paymentOption)</code></li>
-</ul>
-</div><button type="button" class="collapsible">EC2 RI Function with SQL License</button>
-<div class="content">
-<ul>
-<li><code>AWS_EC2(&quot;reserved&quot;, instanceType, region, platform, offeringClass, purchaseTerm, paymentOption, sqlLicense)</code></li>
-</ul>
-<p>Where <code>sqlLicense</code> is either <em>web</em>, <em>std</em>, or <em>enterprise</em> and <code>platform</code> is either <em>linux</em> or <em>windows</em>.</p>
-</div><button type="button" class="collapsible">EC2 Pricing Duration</button>
-<div class="content">
-<p>Prices are currently returned in hourly durations. The price is the <em>effective</em> hourly rate when using reserved instances.</p>
-</div><button type="button" class="collapsible">EBS Storage</button>
-<div class="content">
-<p>You can compute the cost of EBS storage and provisioned IOPS with the <code>AWS_EBS()</code> functions. </p>
-<ul>
-<li><code>AWS_EBS(volumeType, storageType, volumeSize, region)</code></li>
-</ul>
-</div><button type="button" class="collapsible">EBS Computing Storage</button>
-<div class="content">
-<p>The generic function for computing storage is:  </p>
-<ul>
-<li><code>AWS_EBS(volumeType, &quot;storage&quot;, volumeSize, region)</code></li>
-</ul>
-<p>The supported parameters are:</p>
-<ul>
-<li><code>volumeType</code>: The type of volume (<em>magnetic</em>, <em>gp2</em>, <em>io1</em>, <em>io2</em>, <em>st1</em> or <em>sc1</em>)</li>
-<li><code>volumeSize</code>: Size in number of provisioned Gigabytes</li>
-<li><code>region</code>: for example <em>us-east-2</em></li>
-</ul>
-</div><button type="button" class="collapsible">EBS Provisioned IOPS</button>
-<div class="content">
-<p>Provisioned IOPS pricing is only supported on <em>io1</em>, <em>io2</em> and <em>gp3</em> volume types.
-Both functions take the number of <em>iops</em> in the parameter <code>volumeSize</code> to calculate for.</p>
-<ul>
-<li><code>AWS_EBS(&quot;io1&quot;, &quot;iops&quot;, volumeSize, region)</code></li>
-</ul>
-<p>For IO2 IOPS, the functions are the same but will calculate rates using the tiered pricing model.</p>
-<ul>
-<li><code>AWS_EBS(&quot;io2&quot;, &quot;iops&quot;, volumeSize, region)</code></li>
-</ul>
-<p>For GP3 IOPS it is similar tiered pricing, but the first tier is free.</p>
-<ul>
-<li><code>AWS_EBS(&quot;gp3&quot;, &quot;iops&quot;, volumeSize, region)</code></li>
-</ul>
-</div><button type="button" class="collapsible">EBS Snapshot storage</button>
-<div class="content">
-<p>EBS snapshot cost is measured by the amount of stored Gigabytes using the following functions.<br>Note that the first argument is empty. </p>
-<ul>
-<li><code>AWS_EBS(&quot;&quot;, &quot;snapshot&quot;, volumeSize, region)</code></li>
-</ul>
-</div><button type="button" class="collapsible">RDS Instances</button>
-<div class="content">
-<p><em>AWS Pricing</em> supports custom functions for RDS on-demand and reserved-instance pricing.</p>
-</div><button type="button" class="collapsible">RDS DB Engines</button>
-<div class="content">
-<p>RDS DB instance pricing supports the following RDS DB engines. In parentheses, you will find the proper notation for writing the database engine.</p>
-<ul>
-<li>Aurora MySQL (<code>&quot;aurora/mysql&quot;</code>)</li>
-<li>Aurora PostgreSQL (<code>&quot;aurora/postgresql&quot;</code>)</li>
-<li>MySQL (<code>&quot;mysql&quot;</code>)</li>
-<li>PostgreSQL (<code>&quot;postgresql&quot;</code>)</li>
-<li>MariaDB (<code>&quot;mariadb&quot;</code>)</li>
-</ul>
-<p>To use the settings in an RDS call, invoke the appropriate function for the DB engine like:</p>
-<p>And for reserved instances like:  </p>
-<p>For example, to lookup the price for an Aurora MySQL on-demand instance running on a <em>db.r4.2xlarge</em> in region &quot;us-east-2&quot;, use the following call:  </p>
-<ul>
-<li><code>AWS_RDS(&quot;aurora/mysql&quot;, &quot;db.r4.2xlarge&quot;, &quot;us-east-2&quot;, &quot;ondemand&quot;)</code></li>
-</ul>
-</div><button type="button" class="collapsible">RDS On-demand instances</button>
-<div class="content">
-<p>To lookup the on-demand price for a DB instance you can use the explicit call:</p>
-<ul>
-<li><code>AWS_RDS(dbEngine, instanceType, region, &quot;ondemand&quot;)</code></li>
-</ul>
-</div><button type="button" class="collapsible">RDS Reserved instances</button>
-<div class="content">
-<p>To lookup reserved-instance pricing for DB instances uses the following call pattern:</p>
-<ul>
-<li><code>AWS_RDS(dbEngine, instanceType, region, &quot;reserved&quot;, purchaseTerm, paymentOption)</code></li>
-</ul>
-<p>For example, the following call pulls the pricing for an MariaDB reserved instance on a 3yr, all-upfront RI:</p>
-<ul>
-<li><code>AWS_RDS(&quot;mariadb&quot;, &quot;db.r4.2xlarge&quot;, &quot;ca-central-1&quot;, &quot;reserved&quot;, &quot;3yr&quot;, &quot;all_upfront&quot;)</code></li>
-</ul>
-<p>There are two purchase terms:
-<code>&quot;1yr&quot;</code>, <code>&quot;3yr&quot;</code></p>
-<p>There are three payment options:
-<code>&quot;all_upfront&quot;</code>, <code>&quot;no_upfront&quot;</code>, <code>&quot;partial_upfront&quot;</code></p>
-</div><button type="button" class="collapsible">RDS Pricing duration</button>
-<div class="content">
-<p>All RDS functions return the effective price <em>per hour</em>.</p>
-</div><button type="button" class="collapsible">RDS Storage</button>
-<div class="content">
-<p>You can compute the cost of provisioned RDS storage using the <code>AWS_RDS_STORAGE</code> function. This function take the storage type, the size of the volume in Gigabytes and return the hourly cost for the amount of provisioned storage.<br>The supported <code>volumeType</code>&#39;s are: <em>aurora</em>, <em>gp2</em>, <em>piops</em> and <em>magnetic</em>.</p>
-<ul>
-<li><code>AWS_RDS_STORAGE(storageType, storageSize, region)</code></li>
-</ul>
-<p>Storage type can be &quot;aurora&quot;, &quot;gp2&quot;, &quot;piops&quot; and &quot;magnetic&quot;</p>
-</div><button type="button" class="collapsible">Backwards compatibility</button>
-<div class="content">
-<p>This add-on is compatible with a previous version, allowing you to continue using the function notation from that version in your sheets. However, note that the sheets editor&#39;s pop-up suggestion feature will not be available. For more information about the formulas from version 1, please refer to <a href="https://github.com/getmacroscope/aws-pricing/blob/master/Help.md">the following link</a></p> </div>
+  __CONTENT__
 </div>
 
 <div id="tooltip" display="none" style="position: absolute; display: none;"></div>
