Add button in sidebar to quickly navigate to formula builder

--- a/assets/templates/help_dialog_collapsed.html
+++ b/assets/templates/help_dialog_collapsed.html
@@ -124,6 +124,10 @@
       }
     });
   }
+
+  function openFormulaBuilder() {
+    google.script.run.showFormulaBuilder();
+  }
 </script>
 
 <div class="sidebar branding-below">
