--- a/assets/templates/help_dialog_collapsed.html
+++ b/assets/templates/help_dialog_collapsed.html
@@ -48,7 +48,6 @@
   }
   
   .collapsible {
-    cursor: pointer;
     width: 100%;
     text-align: left;
     font-size: 15px;
@@ -83,6 +82,10 @@
   
         button.visible::before {
           transform: rotate(90deg) translateX(-3px);
+        }
+
+        button {
+          cursor: pointer;
         }
 </style>
 
